--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css}\"",
     "preview": "vite preview",
     "postinstall": "husky"
   },
@@ -21,18 +22,35 @@
   },
   "dependencies": {
     "@firebase/auth": "^1.10.1",
+    "@preact/signals": "^2.0.4",
+    "@schedule-x/calendar": "^2.29.0",
+    "@schedule-x/current-time": "^2.29.0",
+    "@schedule-x/drag-and-drop": "^2.29.0",
+    "@schedule-x/event-recurrence": "^2.29.0",
+    "@schedule-x/events-service": "^2.29.0",
+    "@schedule-x/react": "^2.29.0",
+    "@schedule-x/resize": "^2.29.0",
+    "@schedule-x/theme-default": "^2.29.0",
+    "@tabler/icons-react": "^3.31.0",
     "firebase": "^11.6.1",
     "lucide-react": "^0.503.0",
+    "moment": "^2.30.1",
+    "preact": "^10.26.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@mantine/core": "^7.17.7",
+    "@mantine/dates": "^7.17.7",
+    "@mantine/form": "^7.17.7",
+    "@mantine/hooks": "^7.17.7",
     "@tailwindcss/vite": "^4.1.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "dayjs": "^1.11.13",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
@@ -44,6 +62,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
