--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   },
   "dependencies": {
     "@firebase/auth": "^1.10.1",
+    "@mantine/core": "^7.17.7",
+    "@mantine/dates": "^7.17.7",
+    "@mantine/form": "^7.17.7",
+    "@mantine/hooks": "^7.17.7",
+    "@mantine/notifications": "^8.0.0",
     "@preact/signals": "^2.0.4",
     "@schedule-x/calendar": "^2.29.0",
     "@schedule-x/current-time": "^2.29.0",
@@ -42,10 +47,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@mantine/core": "^7.17.7",
-    "@mantine/dates": "^7.17.7",
-    "@mantine/form": "^7.17.7",
-    "@mantine/hooks": "^7.17.7",
     "@tailwindcss/vite": "^4.1.4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
