--- a/package.json
+++ b/package.json
@@ -21,17 +21,16 @@
     ]
   },
   "dependencies": {
-    "@firebase/auth": "^1.10.1",
-    "@mantine/core": "^7.17.7",
-    "@mantine/dates": "^7.17.7",
-    "@mantine/form": "^7.17.7",
-    "@mantine/hooks": "^7.17.7",
+    "@mantine/core": "8.0.0",
+    "@mantine/dates": "8.0.0",
+    "@mantine/form": "8.0.0",
+    "@mantine/hooks": "8.0.0",
     "@mantine/notifications": "^8.0.0",
     "@preact/signals": "^2.0.4",
     "@schedule-x/calendar": "^2.29.0",
     "@schedule-x/current-time": "^2.29.0",
     "@schedule-x/drag-and-drop": "^2.29.0",
-    "@schedule-x/event-recurrence": "^2.29.0",
+    "@schedule-x/event-recurrence": "^2.30.0",
     "@schedule-x/events-service": "^2.29.0",
     "@schedule-x/react": "^2.29.0",
     "@schedule-x/resize": "^2.29.0",
@@ -40,16 +39,16 @@
     "firebase": "^11.6.1",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
-    "preact": "^10.26.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "preact": "^10.26.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@tailwindcss/vite": "^4.1.4",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "18.2.51",
+    "@types/react-dom": "18.2.18",
     "@vitejs/plugin-react": "^4.3.4",
     "dayjs": "^1.11.13",
     "eslint": "^9.22.0",
@@ -63,6 +62,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "typescript": "~5.7.2",
